[gd_scene load_steps=4 format=3 uid="uid://biofl4hqtyaly"]

[ext_resource type="Script" path="res://ui.gd" id="1_5qbo1"]
[ext_resource type="Script" path="res://Debug.gd" id="2_tmnqk"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dcfuc"]
blend_mode = 3

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5qbo1")

[node name="WaterOverlay" type="ColorRect" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_dcfuc")
layout_mode = 0
offset_right = 1150.0
offset_bottom = 648.0
color = Color(0.439216, 0.733333, 1, 1)

[node name="PauseMenu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 163.0

[node name="Label2" type="Label" parent="PauseMenu"]
layout_mode = 2
text = "BTW hit L to unlock/lock the mouse to the screen. lmao."

[node name="coords" type="Label" parent="PauseMenu"]
layout_mode = 2
text = "BTW hit L to unlock/lock the mouse to the screen. lmao."

[node name="Label" type="Label" parent="PauseMenu"]
layout_mode = 2
text = "Mouse Sensitivity"

[node name="SensitivitySlider" type="HSlider" parent="PauseMenu"]
layout_mode = 2
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label3" type="Label" parent="PauseMenu"]
layout_mode = 2
text = "Render Distance"

[node name="RDSlider" type="HSlider" parent="PauseMenu"]
layout_mode = 2
min_value = 2.0
max_value = 16.0
value = 8.0
rounded = true

[node name="Label4" type="Label" parent="PauseMenu"]
layout_mode = 2
text = "Graphics Quality"

[node name="FancySlider" type="HSlider" parent="PauseMenu"]
layout_mode = 2
min_value = 1.0
max_value = 4.0
value = 2.0
rounded = true

[node name="Debug" type="Label" parent="."]
layout_mode = 0
offset_left = 649.0
offset_top = 8.0
offset_right = 1141.0
offset_bottom = 281.0
text = "DEBUG :3"
horizontal_alignment = 2
script = ExtResource("2_tmnqk")

[connection signal="drag_ended" from="PauseMenu/SensitivitySlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_ended" from="PauseMenu/RDSlider" to="." method="_on_rd_slider_drag_ended"]
[connection signal="drag_ended" from="PauseMenu/FancySlider" to="." method="_on_fancy_slider_drag_ended"]
